style.css
body {
    background-color: wheat;
}

.container {
    width: min-content;
    margin: auto;
    display: flex;
    flex-direction: column;
    /* border: 5px solid black; */
    padding: 10px;
    gap: 2px;
}

.display {
    /* border: 2px solid white; */
    border-radius: 10px;
    min-height: 60px;
    font-size: 50px;
    font-family: monospace;
    margin-top: 90px;
    background-color: whitesmoke;
    margin-bottom: 5px;
    margin-left: 5px;
    margin-right: 5px;
    overflow: auto;
    padding: 0px 15px;
}

.calculator {
    /* border: 2px solid white; */
    border-radius: 10px;
    display: flex;
    flex-direction: column;
    padding: 5px;
    gap: 10px;
}

.calculator div {
    display: flex;
    flex-grow: 1;
    gap: 10px;
}

button {
    padding: 7px 15px;
    font-family: monospace;
    font-size: 30px;
    border-radius: 10px;
    border: 0px;
    background-color: whitesmoke;
}

button:hover {
    background-color: gray;
}

._0,
.clear {
    flex-grow: 1;
}

#grow {
    justify-content: space-between;
}

.header {
    font-family: monospace;
    margin: auto;
    text-align: center;
    font-size: 20px;
}

